--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "lib/index.js",
     "license": "MIT",
     "scripts": {
-        "save-cookie": "node ./lib/save-cookie.js",
+        "save-cookie": "node ./cli/save-cookie.js",
         "watch": "tsc --watch",
         "build": "tsc ",
-        "prettier": "prettier ./lib/*.ts ./tets/*.ts --write",
+        "prettier": "prettier ./**/*.ts ./*.ts --write",
         "test-get-html": "node ./test/update-cookie.js",
         "test-list-dir": "node ./test/list-dir.js"
     },
