--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "keywords": [],
     "author": "masx200 <34191203+masx200@users.noreply.github.com>",
-    "description": "获取百度网盘所有文件信息保存到MongoDB数据库的脚本",
+    "description": "    模拟浏览器脚本操作,使用 nodejs 来批量读取和操作网盘文件信息,        获取目录的文件信息,模拟浏览器的脚本操作来发送网络请求",
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.7",
         "@types/btoa": "^1.2.3",
