--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ dist
 
 # TernJS port file
 .tern-port
+cookies.txt
+cookies.json
+userdata/cookies.txt
+userdata/cookies.json
+
+userdata/
+userdata
