--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "main": "lib/index.js",
     "license": "MIT",
     "scripts": {
-        "save-cookie": "node ./cli/save-cookie.js",
+        "save-cookie": "node  --experimental-modules ./cli/save-cookie.js",
         "watch": "tsc --watch",
         "build": "tsc ",
         "prettier": "prettier ./**/*.ts ./*.ts *.json *.md --write",
