--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/mongoose": "^5.7.1",
         "@types/node": "^14.0.11",
         "@types/node-fetch": "^2.5.4",
+        "abort-controller": "^3.0.0",
         "btoa": "^1.2.1",
         "cookie": "^0.4.0",
         "fs-extra": "^8.1.0",
