--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "publishConfig": {
+        "registry": "https://registry.npmjs.com"
+    },
     "bin": "cli/save-cookie.js",
     "types": "dist/index.d.ts",
     "module": "lib/index.js",
