--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "main": "lib/index.js",
     "license": "MIT",
     "scripts": {
-        "test": "yarn test-get-html &&  yarn test-list-dir && yarn test-delete",
+        "test": "yarn test-init && yarn test-get-html &&  yarn test-list-dir && yarn test-delete",
         "save-cookie": "node  --experimental-modules ./cli/save-cookie.js",
         "watch": "tsc --watch",
         "build": "tsc && api-extractor run --local ",
         "prettier": "prettier ./**/*.ts *.json *.md --write ./**/*.js",
         "test-get-html": "node ./test/update-cookie.js",
+        "test-init": "node ./test/initENV.js",
         "test-list-dir": "node ./test/list-dir.js",
         "test-delete": "node ./test/test-delete.js"
     },
