升级依赖,修复https的keepalive功能

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "module": "lib/index.js",
     "type": "module",
     "name": "@masx200/fetch-baidu-pan-files",
-    "version": "1.2.3",
+    "version": "1.2.4",
     "main": "lib/index.js",
     "license": "MIT",
     "scripts": {
@@ -26,19 +26,19 @@
     "description": "    模拟浏览器脚本操作,使用 nodejs 来批量读取和操作网盘文件信息,        获取目录的文件信息,模拟浏览器的脚本操作来发送网络请求",
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.8",
-        "@microsoft/api-extractor": "^7.7.13",
+        "@microsoft/api-extractor": "^7.8.15",
         "@types/btoa": "^1.2.3",
-        "@types/cookie": "^0.3.3",
-        "@types/fs-extra": "^8.1.0",
-        "@types/mongoose": "^5.7.1",
-        "@types/node": "^14.0.11",
-        "@types/node-fetch": "^2.5.4",
+        "@types/cookie": "^0.4.0",
+        "@types/fs-extra": "^9.0.1",
+        "@types/mongoose": "^5.7.28",
+        "@types/node": "^14.0.14",
+        "@types/node-fetch": "^2.5.7",
         "abort-controller": "^3.0.0",
         "btoa": "^1.2.1",
-        "cookie": "^0.4.0",
-        "fs-extra": "^8.1.0",
-        "mongoose": "^5.9.2",
-        "node-fetch": "3.0.0-beta.6-exportfix",
+        "cookie": "^0.4.1",
+        "fs-extra": "^9.0.1",
+        "mongoose": "^5.9.20",
+        "node-fetch": "^2.6.0",
         "prettier": "^2.0.5",
         "typescript": "^3.9.5"
     },
