--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "module": "lib/index.js",
     "type": "module",
     "name": "@masx200/fetch-baidu-pan-files",
-    "version": "1.2.8",
+    "version": "1.2.9",
     "main": "lib/index.js",
     "license": "MIT",
     "scripts": {
-        "test": "yarn test-init && yarn test-get-html &&  yarn test-list-dir && yarn test-delete",
+        "test": "yarn test-init && yarn test-get-html &&  yarn test-list-dir && yarn test-delete &&yarn test-query-task",
         "save-cookie": "node  --experimental-modules ./cli/save-cookie.js",
         "watch": "tsc --watch",
         "build": "tsc && api-extractor run --local ",
@@ -19,6 +19,7 @@
         "test-get-html": "node ./test/update-cookie.js",
         "test-init": "node ./test/initENV.js",
         "test-list-dir": "node ./test/list-dir.js",
+        "test-query-task": "node ./test/query-task.js",
         "test-delete": "node ./test/test-delete.js"
     },
     "keywords": [],
