--- a/package.json
+++ b/package.json
@@ -38,13 +38,24 @@
         "btoa": "^1.2.1",
         "cookie": "^0.4.1",
         "fs-extra": "^9.0.1",
-        "mongoose": "^5.9.20",
-        "node-fetch": "^2.6.0",
-        "prettier": "^2.0.5",
+        
+        "node-fetch": "^2.6.0"
+        
+    },
+    "devDependencies": {
+
+
+
+
+
+
+"mongoose": "^5.9.20",
+
+"prettier": "^2.0.5",
         "tslib": "^2.0.0",
         "typescript": "^3.9.5"
-    },
-    "devDependencies": {},
+
+},
     "repository": {
         "type": "git",
         "url": "git+https://github.com/masx200/fetch-baidu-pan-files.git"
