--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "scripts": {
         "test": "yarn test-init && yarn test-get-html &&  yarn test-list-dir && yarn test-delete &&yarn test-query-task",
         "save-cookie": "node  --experimental-modules ./cli/save-cookie.js",
-        "watch": "tsc --watch",
         "build": "tsc && api-extractor run --local ",
         "prettier": "prettier ./**/*.ts *.json *.md --write ./**/*.js",
         "test-get-html": "node ./test/update-cookie.js",
@@ -27,6 +26,7 @@
     "description": "    模拟浏览器脚本操作,使用 nodejs 来批量读取和操作网盘文件信息,        获取目录的文件信息,模拟浏览器的脚本操作来发送网络请求",
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.9",
+        "@masx200/mini-cli-args-parser": "^1.0.0",
         "@types/btoa": "^1.2.3",
         "@types/cookie": "^0.4.0",
         "@types/fs-extra": "^9.0.1",
