--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "module": "lib/index.js",
     "type": "module",
     "name": "@masx200/fetch-baidu-pan-files-api",
-    "version": "2.0.2",
+    "version": "2.0.3",
     "main": "lib/index.js",
     "license": "MIT",
     "scripts": {
@@ -46,7 +46,8 @@
         "mquery": "3.2.3",
         "prettier": "^2.2.1",
         "tslib": "^2.0.3",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+"lodash":"4.17.21"
     },
     "repository": {
         "type": "git",
