--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
         "@masx200/mini-cli-args-parser": "^1.0.2",
         "@types/btoa": "^1.2.3",
         "@types/cookie": "^0.4.0",
-        "@types/fs-extra": "^9.0.5",
-        "@types/mongoose": "^5.10.2",
-        "@types/node": "^14.14.14",
-        "@types/node-fetch": "^2.5.7",
+        "@types/fs-extra": "^9.0.11",
+        "@types/mongoose": "^5.10.5",
+        "@types/node": "^15.0.2",
+        "@types/node-fetch": "^2.5.10",
         "abort-controller": "^3.0.0",
         "btoa": "^1.2.1",
         "cookie": "^0.4.1",
-        "fs-extra": "^9.0.1",
+        "fs-extra": "^10.0.0",
         "node-fetch": "^2.6.1"
     },
     "devDependencies": {
-        "@microsoft/api-extractor": "^7.12.1",
-        "mquery": "3.2.3",
-        "prettier": "^2.2.1",
-        "tslib": "^2.0.3",
-        "typescript": "^4.1.3",
-"lodash":"4.17.21"
+        "@microsoft/api-extractor": "^7.15.1",
+        "lodash": "4.17.21",
+        "mquery": "3.2.5",
+        "prettier": "^2.3.0",
+        "tslib": "^2.2.0",
+        "typescript": "^4.2.4"
     },
     "repository": {
         "type": "git",
