--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "license": "MIT",
     "scripts": {
         "test": "yarn test-cookie &&yarn test-init && yarn test-get-html &&  yarn test-list-dir && yarn test-delete &&yarn test-query-task",
-        "save-cookie": "node  --experimental-modules ./cli/save-cookie.js",
+        "save-cookie": "node  --experimental-modules ./dist/save-cookie.js",
         "test-cookie": "yarn save-cookie    --bdstoken=3789cf378cf79ea16dd4310a11afad68 \"--cookie=BIDUPSID=C7CAB23C40776BF5E48C67310FD01E74; PSTM=1590808841; BAIDUID=C7CAB23C40776BF5213C5AE187C386C6:FG=1; PANWEB=1; pan_login_way=1; BDCLND=uu57jGT9ElzGWAeaeVEZc0LjXMLt9w2JqQgKARJ5b1Y%3D; BDUSS=3NKUDRHZ1lMMkpILU0ybllPZDJtTWIxWGs2WXRvS1lQZC1SU1VJV0JDQUtScDFmSUFBQUFBJCQAAAAAAAAAAAEAAADPRYIEbWFzeDIwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq5dV8KuXVfM; BDUSS_BFESS=3NKUDRHZ1lMMkpILU0ybllPZDJtTWIxWGs2WXRvS1lQZC1SU1VJV0JDQUtScDFmSUFBQUFBJCQAAAAAAAAAAAEAAADPRYIEbWFzeDIwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq5dV8KuXVfM; STOKEN=6e7b5cea4d59e1967142508f57990b4218c2d38c93070a646e3493ad0401dcf7; SCRC=c5353cef847fc068755a7759062f12f7; Hm_lvt_7a3960b6f067eb0085b7f96ff5e660b0=1599360119,1601538650,1601540146,1601550607; Hm_lpvt_7a3960b6f067eb0085b7f96ff5e660b0=1601550607; PANPSC=1263501417102908774%3AKkwrx6t0uHDoTFmRfJVxoMJKt428qvGu%2B%2FtD9xp6N5gr2wqYbSNJzI%2BMN1l%2FFuMgUCTN6WhC3i%2FKGWKyBagKrmlUQ2zB5GaPDtTCc6ZqWjGu2cUHmw770eVcjWJ40Swp0v29HoOyBxO7W09FU%2BvrLt8NRd7EA5d%2B2fNZfjs7wBY%2FcoIBUQpA2juoAeCl9TBG\"",
         "build": "rollup -c rollup.config.js",
-        "prettier": "prettier ./**/*.ts *.json *.md --write ./**/*.js",
+        "format": "prettier ./**/*.ts *.json *.md --write ./**/*.js *.js",
         "test-get-html": "node ./test/update-cookie.js",
         "test-init": "node ./test/initENV.js",
         "test-list-dir": "node ./test/list-dir.js",
@@ -28,19 +28,23 @@
     "description": "    模拟浏览器脚本操作,使用 nodejs 来批量读取和操作网盘文件信息,        获取目录的文件信息,模拟浏览器的脚本操作来发送网络请求",
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.9",
-        "@masx200/mini-cli-args-parser": "^1.0.2",
+        "@masx200/mini-cli-args-parser": "^1.0.4",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^20.0.0",
+        "@rollup/plugin-node-resolve": "^13.0.4",
         "@types/btoa": "^1.2.3",
         "@types/cookie": "^0.4.0",
         "@types/fs-extra": "^9.0.11",
         "@types/mongoose": "^5.10.5",
         "@types/node": "^15.0.2",
         "@types/node-fetch": "^2.5.10",
-        "abort-controller": "^3.0.0",
         "btoa": "^1.2.1",
         "cookie": "^0.4.1",
         "fs-extra": "^10.0.0",
         "node-fetch": "^2.6.1",
-        "rollup": "^2.56.2"
+        "rollup": "^2.56.2",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-ts": "^1.4.0"
     },
     "devDependencies": {
         "lodash": "4.17.21",
