--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "module": "dist/index.js",
     "type": "module",
     "name": "@masx200/fetch-baidu-pan-files-api",
-    "version": "2.1.3",
+    "version": "2.1.4",
     "main": "dist/index.js",
     "license": "MIT",
     "scripts": {
@@ -24,9 +24,6 @@
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.9",
         "@masx200/mini-cli-args-parser": "^1.0.4",
-        "@rollup/plugin-babel": "^5.3.0",
-        "@rollup/plugin-commonjs": "^20.0.0",
-        "@rollup/plugin-node-resolve": "^13.0.4",
         "@types/btoa": "^1.2.3",
         "@types/cookie": "^0.4.0",
         "@types/fs-extra": "^9.0.11",
@@ -36,16 +33,19 @@
         "btoa": "^1.2.1",
         "cookie": "^0.4.1",
         "fs-extra": "^10.0.0",
-        "node-fetch": "^2.6.1",
-        "rollup": "^2.56.2",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-ts": "^1.4.0"
+        "node-fetch": "^2.6.1"
     },
     "devDependencies": {
         "@babel/core": "^7.15.4",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^20.0.0",
+        "@rollup/plugin-node-resolve": "^13.0.4",
         "lodash": "4.17.21",
         "mquery": "3.2.5",
         "prettier": "^2.3.0",
+        "rollup": "^2.56.2",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-ts": "^1.4.0",
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
     },
