--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
         "btoa": "^1.2.1",
         "cookie": "^0.4.1",
         "fs-extra": "^10.0.0",
-        "node-fetch": "^2.6.1"
+        "node-fetch": "2"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.4",
-        "@rollup/plugin-babel": "^5.3.0",
-        "@rollup/plugin-commonjs": "^20.0.0",
-        "@rollup/plugin-node-resolve": "^13.0.4",
+        "@babel/core": "^7.17.8",
+        "@rollup/plugin-babel": "^5.3.1",
+        "@rollup/plugin-commonjs": "^21.0.2",
+        "@rollup/plugin-node-resolve": "^13.1.3",
         "lodash": "4.17.21",
         "mquery": "3.2.5",
         "prettier": "^2.3.0",
-        "rollup": "^2.56.2",
+        "rollup": "^2.70.1",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-ts": "^1.4.0",
         "tslib": "^2.2.0",
-        "typescript": "^4.2.4"
+        "typescript": "^4.6.3"
     },
     "repository": {
         "type": "git",
