--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+    "files": [
+        "dist"
+    ],
     "publishConfig": {
         "access": "public",
-        "registry": "https://registry.npmjs.com"
+        "registry": "https://registry.npmjs.org"
     },
     "bin": "dist/save-cookie.js",
     "types": "lib/index.ts",
