--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
         "registry": "https://registry.npmjs.org"
     },
     "bin": "dist/save-cookie.js",
-    "types": "lib/index.ts",
+    "types": "dist/index.d.ts",
     "module": "dist/index.js",
     "type": "module",
     "name": "@masx200/fetch-baidu-pan-files-api",
-    "version": "3.0.0",
+    "version": "3.0.1",
     "main": "dist/index.js",
     "license": "MIT",
     "scripts": {
