--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "module": "dist/index.js",
     "type": "module",
     "name": "@masx200/fetch-baidu-pan-files-api",
-    "version": "3.0.2",
+    "version": "3.0.3",
     "main": "dist/index.cjs",
     "license": "MIT",
     "scripts": {
@@ -19,7 +19,7 @@
         "save-cookie": "node  --experimental-modules ./dist/save-cookie.js",
         "test-cookie": "yarn save-cookie    \"--cookie=BIDUPSID=C7CAB23C40776BF5E48C67310FD01E74; PSTM=1590808841; BAIDUID=C7CAB23C40776BF5213C5AE187C386C6:FG=1; PANWEB=1; pan_login_way=1; BDCLND=uu57jGT9ElzGWAeaeVEZc0LjXMLt9w2JqQgKARJ5b1Y%3D; BDUSS=3NKUDRHZ1lMMkpILU0ybllPZDJtTWIxWGs2WXRvS1lQZC1SU1VJV0JDQUtScDFmSUFBQUFBJCQAAAAAAAAAAAEAAADPRYIEbWFzeDIwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq5dV8KuXVfM; BDUSS_BFESS=3NKUDRHZ1lMMkpILU0ybllPZDJtTWIxWGs2WXRvS1lQZC1SU1VJV0JDQUtScDFmSUFBQUFBJCQAAAAAAAAAAAEAAADPRYIEbWFzeDIwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq5dV8KuXVfM; STOKEN=6e7b5cea4d59e1967142508f57990b4218c2d38c93070a646e3493ad0401dcf7; SCRC=c5353cef847fc068755a7759062f12f7; Hm_lvt_7a3960b6f067eb0085b7f96ff5e660b0=1599360119,1601538650,1601540146,1601550607; Hm_lpvt_7a3960b6f067eb0085b7f96ff5e660b0=1601550607; PANPSC=1263501417102908774%3AKkwrx6t0uHDoTFmRfJVxoMJKt428qvGu%2B%2FtD9xp6N5gr2wqYbSNJzI%2BMN1l%2FFuMgUCTN6WhC3i%2FKGWKyBagKrmlUQ2zB5GaPDtTCc6ZqWjGu2cUHmw770eVcjWJ40Swp0v29HoOyBxO7W09FU%2BvrLt8NRd7EA5d%2B2fNZfjs7wBY%2FcoIBUQpA2juoAeCl9TBG\"",
         "build": "rollup -c rollup.config.mjs",
-        "format": "prettier ./**/*.ts *.json *.md --write ./**/*.js *.js"
+        "format": "prettier ./**/*.ts *.json *.md --write ./**/*.js *.mjs"
     },
     "keywords": [],
     "author": "masx200 <34191203+masx200@users.noreply.github.com>",
@@ -27,13 +27,6 @@
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.9",
         "@masx200/mini-cli-args-parser": "^1.0.4",
-        "@types/btoa": "^1.2.3",
-        "@types/cookie": "^0.4.0",
-        "@types/fs-extra": "^9.0.11",
-        "@types/mongoose": "^5.10.5",
-        "@types/node": "^15.0.2",
-        "@types/node-fetch": "^2.5.10",
-        "btoa": "^1.2.1",
         "cookie": "^0.4.1",
         "fs-extra": "^10.0.0",
         "node-fetch": "2"
@@ -43,10 +36,18 @@
         "@rollup/plugin-babel": "^5.3.1",
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^13.1.3",
+        "@types/btoa": "^1.2.3",
+        "@types/cookie": "^0.4.0",
+        "@types/fs-extra": "^9.0.11",
+        "@types/mongoose": "^5.10.5",
+        "@types/node": "^15.0.2",
+        "@types/node-fetch": "^2.5.10",
+        "btoa": "^1.2.1",
         "lodash": "4.17.21",
         "mquery": "3.2.5",
         "prettier": "^2.3.0",
         "rollup": "^2.70.1",
+        "rollup-external-modules": "^2.0.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-ts": "^2.0.5",
         "tslib": "^2.2.0",
