--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "exports": {
         ".": {
-            "require": "./dist/index.js",
-            "import": "./dist/index.cjs"
+            "require": "./dist/index.cjs",
+            "import": "./dist/index.js"
         }
     },
     "files": [
