--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "@masx200/async-task-current-limiter": "^2.0.0",
         "@masx200/mini-cli-args-parser": "^1.0.4",
         "cookie": "^0.4.1",
-        "fs-extra": "^10.0.0",
-        "node-fetch": "2"
+        "cross-fetch": "^3.1.5",
+        "fs-extra": "^10.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
@@ -47,7 +47,6 @@
         "@types/fs-extra": "^9.0.11",
         "@types/mongoose": "^5.10.5",
         "@types/node": "^15.0.2",
-        "@types/node-fetch": "^2.5.10",
         "btoa": "^1.2.1",
         "lodash": "4.17.21",
         "mquery": "3.2.5",
